--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JOHNLEWIS</title>
+    <link href="https://api.fontshare.com/v2/css?f[]=clash-grotesk@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./package/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
@@ -15,16 +16,63 @@
         <p class="mb-0">New season coming!  Discount 10% for all product!  Checkout Now!   <span>20:40</span></p>
      
     </div>
+    <header class="container py-3">
+  <div class="d-flex justify-content-between align-items-center">
+    <!-- Logo -->
+   <img src="./images/logo.png" alt="logo">
+
+    <!-- Right-side icons -->
+    <div class="d-flex align-items-center gap-3">
+      <!-- Search -->
+      <button class="btn btn-link p-0 text-dark">
+        <i class="bi bi-search fs-5"></i>
+      </button>
+
+      <!-- Categories Dropdown -->
+      <div class="dropdown">
+        <button class="btn btn-link dropdown-toggle text-dark p-0" type="button" data-bs-toggle="dropdown">
+          Categories
+        </button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">Clothing</a></li>
+          <li><a class="dropdown-item" href="#">Home</a></li>
+        </ul>
+      </div>
+
+      <!-- Sign In -->
+      <a href="#" class="text-decoration-none text-dark d-flex align-items-center gap-1">
+        <i class="bi bi-person"></i> <span class="d-none d-md-inline">Sign in</span>
+      </a>
+
+      <!-- Wishlist -->
+      <a href="#" class="text-dark">
+        <i class="bi bi-heart fs-5"></i>
+      </a>
+
+      <!-- Cart -->
+      <a href="#" class="position-relative text-dark">
+        <i class="bi bi-bag fs-5"></i>
+        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-dark text-white" style="font-size: 0.6rem;">
+          0
+        </span>
+      </a>
+    </div>
+  </div>
+</header>
+
    </main>
    <footer class="footer bg-light text-dark pt-5 pb-4">
   <div class="container">
-    <div class="row gy-4">
+    <div class="row gy-4 pb-md-5">
       <!-- Logo and Newsletter -->
       <div class="col-md-4">
-        <img src="./images/logo.png" alt="">
-        <div class="input-group mb-3 subscribe">
-          <input type="email" class="form-control border-end-0" placeholder="Get latest offers to your inbox" />
-          <button class="btn btn-dark" type="button">➤</button>
+        <div class="md-w-75 ">
+            <img src="./images/logo.png" alt="">
+        <div class="input-group mb-3 subscribe pt-4">
+          <input type="email" class="form-control " placeholder="Get latest offers to your inbox" />
+          <button class="btn btn-dark" type="button">
+            <img src="./images/arrow.png" alt="">
+          </button>
         </div>
         <div class="social-icons mt-3">
           <a href="#"><img src="./images/face.png" alt="img"></a>
@@ -32,11 +80,13 @@
           <a href="#"><img src="./images/twiiter.png" alt="img"></a>
           <a href="#"><img src="./images/IconBox.png" alt="img"></a>
         </div>
+        </div>
+      
       </div>
 
       <!-- Shop -->
       <div class="col-6 col-md-2">
-        <h6 class="fw-bold">Shop</h6>
+        <h6 >Shop</h6>
         <ul class="list-unstyled">
           <li><a href="#">My account</a></li>
           <li><a href="#">Login</a></li>
@@ -47,7 +97,7 @@
 
       <!-- Information -->
       <div class="col-6 col-md-3">
-        <h6 class="fw-bold">Information</h6>
+        <h6 >Information</h6>
         <ul class="list-unstyled">
           <li><a href="#">Shipping Policy</a></li>
           <li><a href="#">Returns & Refunds</a></li>
@@ -58,7 +108,7 @@
 
       <!-- Company -->
       <div class="col-md-3">
-        <h6 class="fw-bold">Company</h6>
+        <h6 >Company</h6>
         <ul class="list-unstyled">
           <li><a href="#">About us</a></li>
           <li><a href="#">Privacy Policy</a></li>
@@ -70,9 +120,9 @@
 
 <hr class="hr-dashed" />
 
-    <div class="loowerfoorer d-flex justify-content-between align-items-center flex-wrap small text-muted">
+    <div class="loowerfoorer  small text-muted">
       <p class="mb-0">© John Lewis plc 2001 - 2024</p>
-      <div class="d-flex gap-3">
+      <div class="d-flex gap-3 text-end ms-auto">
         <div class="dropdown">
           <button class="btn btn-link dropdown-toggle text-decoration-none text-muted p-0" type="button" data-bs-toggle="dropdown">
             <img src="https://flagcdn.com/us.svg" width="20" class="me-1"> English
@@ -95,6 +145,7 @@
     </div>
   </div>
 </footer>
+
     <script src="./package/bootstrap.bundle.min.js"></script>
     <script src="./package/bootstrap.min.js"></script>
 </body>
