--- a/index_ar.html
+++ b/index_ar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ar" dir="rtl">
 
 <head>
   <meta charset="UTF-8">
@@ -416,10 +416,10 @@
         <p class="mb-0">© John Lewis plc 2001 - 2024</p>
         <div class="d-flex gap-3" id="topbar-dropdowns">
           <!-- Language Dropdown -->
-          <div class="custom-dropdown" data-selected="English">
+          <div class="custom-dropdown" data-selected="العربية">
             <button class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
-              <img src="https://flagcdn.com/us.svg" width="20" alt="English" />
-              <span>English</span>
+              <img src="https://flagcdn.com/eg.svg" width="20" alt="العربية" />
+              <span>العربية</span>
             </button>
             <ul class="dropdown-menu">
               <li>
