--- a/index_ar.html
+++ b/index_ar.html
@@ -360,35 +360,35 @@
             <div class="rating-row d-flex align-items-center py-2" data-count="2823" data-total="2865">
               <div class="rating-label">5.0 <i class="bi bi-star-fill "></i></div>
               <div class="progress flex-grow-1">
-                <div class="progress-bar bg-dark ms-2" style="width: 98.5%"></div>
+                <div class="progress-bar bg-dark" style="width: 98.5%"></div>
               </div>
               <div class="rating-count">2823</div>
             </div>
             <div class="rating-row d-flex align-items-center py-2" data-count="38" data-total="2865">
               <div class="rating-label">4.0 <i class="bi bi-star-fill "></i></div>
               <div class="progress flex-grow-1">
-                <div class="progress-bar bg-dark ms-2" style="width: 75%"></div>
+                <div class="progress-bar bg-dark" style="width: 75%"></div>
               </div>
               <div class="rating-count">38</div>
             </div>
             <div class="rating-row d-flex align-items-center py-2" data-count="4" data-total="2865">
               <div class="rating-label">3.0 <i class="bi bi-star-fill "></i></div>
               <div class="progress flex-grow-1">
-                <div class="progress-bar bg-dark ms-2" style="width: 30%"></div>
+                <div class="progress-bar bg-dark" style="width: 30%"></div>
               </div>
               <div class="rating-count">4</div>
             </div>
             <div class="rating-row d-flex align-items-center py-2" data-count="0" data-total="2865">
               <div class="rating-label">2.0 <i class="bi bi-star-fill "></i></div>
               <div class="progress flex-grow-1">
-                <div class="progress-bar bg-dark ms-2" style="width: 0%"></div>
+                <div class="progress-bar bg-dark" style="width: 0%"></div>
               </div>
               <div class="rating-count">0</div>
             </div>
             <div class="rating-row d-flex align-items-center py-2" data-count="0" data-total="2865">
               <div class="rating-label">1 . 0 <i class="bi bi-star-fill "></i></div>
               <div class="progress flex-grow-1">
-                <div class="progress-bar bg-dark ms-2" style="width: 0%"></div>
+                <div class="progress-bar bg-dark" style="width: 0%"></div>
               </div>
               <div class="rating-count">0</div>
             </div>
