--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <!-- Main Swiper -->
             <div class="swiper mainSwiper">
               <div class="swiper-wrapper">
-                <div class="swiper-slide">
+                <div class="swiper-slide itemisactive">
                   <img src="./images/image.png" alt="Main product" class="img-main">
                 </div>
                 <div class="swiper-slide">
