--- a/index_ar.html
+++ b/index_ar.html
@@ -7,9 +7,10 @@
   <title>JOHNLEWIS</title>
   <link href="https://api.fontshare.com/v2/css?f[]=clash-grotesk@1&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./package/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.rtl.min.css" integrity="sha384-DOXMLfHhQkvFFp+rWTZwVlPVqdIhpDVYT9csOnHSgWQWPX0v5MCGtjCJbY6ERspU" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.rtl.min.css"
+    integrity="sha384-DOXMLfHhQkvFFp+rWTZwVlPVqdIhpDVYT9csOnHSgWQWPX0v5MCGtjCJbY6ERspU" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-  
+
   <link rel="stylesheet" href="./package/swiper.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -100,8 +101,8 @@
             <!-- Main Swiper -->
             <div class="swiper mainSwiper">
               <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <img src="./images/image.png" alt="Main product" class="img-main">
+                <div class="swiper-slide itemisactive"> <img src="./images/image.png" alt="Main product"
+                    class="img-main">
                 </div>
                 <div class="swiper-slide">
                   <img src="./images/image 19.png" alt="main" class="img-main">
@@ -118,22 +119,23 @@
               </div>
             </div>
 
-           <!-- Wishlist, Share & Swiper Controls -->
-<div class="position-absolute top-0 end-0 h-100 d-flex flex-column justify-content-between align-items-center p-2 z-3">
+            <!-- Wishlist, Share & Swiper Controls -->
+            <div
+              class="position-absolute top-0 end-0 h-100 d-flex flex-column justify-content-between align-items-center p-2 z-3">
 
-  <!-- Top: Wishlist and Share Buttons -->
-  <div class="d-flex flex-column gap-2">
-      <img src="./images/share.png" alt="Share" />
-      <img src="./images/heart.png" alt="Wishlist" />
-  </div>
+              <!-- Top: Wishlist and Share Buttons -->
+              <div class="d-flex flex-column gap-2">
+                <img src="./images/share.png" alt="Share" />
+                <img src="./images/heart.png" alt="Wishlist" />
+              </div>
 
-  <!-- Bottom: Swiper Navigation Buttons -->
-  <div class="d-flex flex-column gap-2">
-      <img src="./images/right.png" alt="Previous" class="swiper-button-pre" />
-      <img src="./images/left.png" alt="Next"  class="swiper-button-net" />
-  </div>
+              <!-- Bottom: Swiper Navigation Buttons -->
+              <div class="d-flex flex-column gap-2">
+                <img src="./images/right.png" alt="Previous" class="swiper-button-pre" />
+                <img src="./images/left.png" alt="Next" class="swiper-button-net" />
+              </div>
 
-</div>
+            </div>
 
           </div>
 
@@ -328,74 +330,74 @@
 
     <section class="product-reviews  py-5">
 
-        <h4 class="fw-semibold mb-4">Product Reviews</h5>
+      <h4 class="fw-semibold mb-4">Product Reviews</h5>
 
-      <div class="product-review rounded p-4 mb-md-5">
+        <div class="product-review rounded p-4 mb-md-5">
 
-        <div class="d-flex flex-md-row flex-column flex-wrap align-items-start gap-4">
+          <div class="d-flex flex-md-row flex-column flex-wrap align-items-start gap-4">
 
-          <!-- Average Rating -->
-          <div class="text-center rating-summary align-items-start pt-3">
-            <div class="rating-circle mb-2">
-              <div class="circle-progress">
-                <span class="rating-value fw-bold">4.5</span>
+            <!-- Average Rating -->
+            <div class="text-center rating-summary align-items-start pt-3">
+              <div class="rating-circle mb-2">
+                <div class="circle-progress">
+                  <span class="rating-value fw-bold">4.5</span>
+                </div>
               </div>
+              <div class="px-2">
+                <div class="d-flex justify-content-center align-items-center gap-1 mb-1">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </div>
+                <small class="text-muted">from 1,25k reviews</small>
+
+              </div>
+
             </div>
-            <div class="px-2">
-              <div class="d-flex justify-content-center align-items-center gap-1 mb-1">
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-              </div>
-              <small class="text-muted">from 1,25k reviews</small>
 
+            <!-- Ratings Breakdown -->
+            <div class="flex-grow-1 widthauto">
+              <div class="rating-row d-flex align-items-center py-2" data-count="2823" data-total="2865">
+                <div class="rating-label">5.0 <i class="bi bi-star-fill "></i></div>
+                <div class="progress flex-grow-1">
+                  <div class="progress-bar bg-dark" style="width: 98.5%"></div>
+                </div>
+                <div class="rating-count">2823</div>
+              </div>
+              <div class="rating-row d-flex align-items-center py-2" data-count="38" data-total="2865">
+                <div class="rating-label">4.0 <i class="bi bi-star-fill "></i></div>
+                <div class="progress flex-grow-1">
+                  <div class="progress-bar bg-dark" style="width: 75%"></div>
+                </div>
+                <div class="rating-count">38</div>
+              </div>
+              <div class="rating-row d-flex align-items-center py-2" data-count="4" data-total="2865">
+                <div class="rating-label">3.0 <i class="bi bi-star-fill "></i></div>
+                <div class="progress flex-grow-1">
+                  <div class="progress-bar bg-dark" style="width: 30%"></div>
+                </div>
+                <div class="rating-count">4</div>
+              </div>
+              <div class="rating-row d-flex align-items-center py-2" data-count="0" data-total="2865">
+                <div class="rating-label">2.0 <i class="bi bi-star-fill "></i></div>
+                <div class="progress flex-grow-1">
+                  <div class="progress-bar bg-dark" style="width: 0%"></div>
+                </div>
+                <div class="rating-count">0</div>
+              </div>
+              <div class="rating-row d-flex align-items-center py-2" data-count="0" data-total="2865">
+                <div class="rating-label">1 . 0 <i class="bi bi-star-fill "></i></div>
+                <div class="progress flex-grow-1">
+                  <div class="progress-bar bg-dark" style="width: 0%"></div>
+                </div>
+                <div class="rating-count">0</div>
+              </div>
             </div>
 
           </div>
-
-          <!-- Ratings Breakdown -->
-          <div class="flex-grow-1 widthauto">
-            <div class="rating-row d-flex align-items-center py-2" data-count="2823" data-total="2865">
-              <div class="rating-label">5.0 <i class="bi bi-star-fill "></i></div>
-              <div class="progress flex-grow-1">
-                <div class="progress-bar bg-dark" style="width: 98.5%"></div>
-              </div>
-              <div class="rating-count">2823</div>
-            </div>
-            <div class="rating-row d-flex align-items-center py-2" data-count="38" data-total="2865">
-              <div class="rating-label">4.0 <i class="bi bi-star-fill "></i></div>
-              <div class="progress flex-grow-1">
-                <div class="progress-bar bg-dark" style="width: 75%"></div>
-              </div>
-              <div class="rating-count">38</div>
-            </div>
-            <div class="rating-row d-flex align-items-center py-2" data-count="4" data-total="2865">
-              <div class="rating-label">3.0 <i class="bi bi-star-fill "></i></div>
-              <div class="progress flex-grow-1">
-                <div class="progress-bar bg-dark" style="width: 30%"></div>
-              </div>
-              <div class="rating-count">4</div>
-            </div>
-            <div class="rating-row d-flex align-items-center py-2" data-count="0" data-total="2865">
-              <div class="rating-label">2.0 <i class="bi bi-star-fill "></i></div>
-              <div class="progress flex-grow-1">
-                <div class="progress-bar bg-dark" style="width: 0%"></div>
-              </div>
-              <div class="rating-count">0</div>
-            </div>
-            <div class="rating-row d-flex align-items-center py-2" data-count="0" data-total="2865">
-              <div class="rating-label">1 . 0 <i class="bi bi-star-fill "></i></div>
-              <div class="progress flex-grow-1">
-                <div class="progress-bar bg-dark" style="width: 0%"></div>
-              </div>
-              <div class="rating-count">0</div>
-            </div>
-          </div>
-
         </div>
-      </div>
     </section>
 
 
